RESOLVED FIXED115503
text-combine: horizontal does not work properly for some fonts.
https://bugs.webkit.org/show_bug.cgi?id=115503
Summary text-combine: horizontal does not work properly for some fonts.
Enrica Casucci
Reported 2013-05-01 18:06:38 PDT
Created attachment 200292 [details] Test case Open the attached test case. Notice that for SCHeiti the number is not horizontal. <rdar://problem/13322851>
Attachments
Test case (540 bytes, application/xhtml+xml)
2013-05-01 18:06 PDT, Enrica Casucci
no flags
Patch (31.58 KB, patch)
2013-05-01 18:40 PDT, Enrica Casucci
hyatt: review+
Enrica Casucci
Comment 1 2013-05-01 18:40:37 PDT
Dave Hyatt
Comment 2 2013-05-01 18:44:01 PDT
Comment on attachment 200296 [details] Patch r=me
Enrica Casucci
Comment 3 2013-05-01 18:48:04 PDT
Committed revision 149474.
Note You need to log in before you can comment on or make changes to this bug.