text-combine: horizontal does not work properly for some fonts. https://bugs.webkit.org/show_bug.cgi?id=115503.

Reviewed by Dave Hyatt.

Source/WebCore:

For some fonts that don't have width variants, we fail to combine glyphs
because we believe they don't fit. That decision is made comparing the run width
with the font computed size multiplied by a margin factor.
I've increased the margin from 10% to 15%.

Test: fast/text/text-combine-different-fonts.html

* rendering/RenderCombineText.cpp:

LayoutTests:

* fast/text/text-combine-different-fonts.html: Added.
* platform/mac/fast/text/text-combine-different-fonts-expected.png: Added.
* platform/mac/fast/text/text-combine-different-fonts-expected.txt: Added.



Canonical link: https://commits.webkit.org/133950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149474 268f45cc-cd09-0410-ab3c-d52691b4dbfc